Name:                sysui
Version:             0.1.0
Synopsis:            system UI displays battery, network and date information
Description:         system UI displays battery, network and date information
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Desktop
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/sysui
Cabal-Version:       >=1.10
data-files:          README.md

library
  exposed-modules:   Graphics.Sysui
  other-modules:     Graphics.Sysui.PowerSupply
                   , Graphics.Sysui.PowerSupply.Battery
                   , Graphics.Sysui.PowerSupply.AC
  default-language:  Haskell2010
  Hs-Source-Dirs:    .
  ghc-options:       -Wall -fno-warn-missing-signatures -threaded
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , utf8-string
                   , unix
                   , cairo
                   , mtl
                   , directory
                   , filepath
                   , hourglass >= 0.2.1
                   , gtk3 >= 0.12

Executable           sysui
  Main-Is:           Sysui.hs
  ghc-options:       -Wall -fno-warn-missing-signatures -threaded
  Hs-Source-Dirs:    src
  default-language:  Haskell2010
  Build-depends:     base >= 4 && < 5
                   , sysui
                   , hourglass >= 0.2.1

source-repository head
  type: git
  location: git://github.com/vincenthz/sysui
